update the validation