@@ -2,35 +2,36 @@ package akshat.e_commerce.Service;
 
 
 import akshat.e_commerce.Entity.UserModel;
-import akshat.e_commerce.Respository.UserRespository;
+import akshat.e_commerce.Respository.UserRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 @Service
 public class UserService {
 
+    private static final Logger logger = LoggerFactory.getLogger(UserService.class);
+
     @Autowired
-    private UserRespository UserRespository;
+    private UserRepository UserRespository;
 
     @Autowired
     private PasswordEncoder passwordEncoder;
 
-    public boolean saveUser(UserModel user) {
-        try {
-            user.setPassword(passwordEncoder.encode(user.getPassword()));
-            if (user.getRoles() == null || user.getRoles().isEmpty()) {
-                user.setRoles(Arrays.asList("USER"));
-            }
-            UserRespository.save(user);
-            return true;
-        } catch (Exception e) {
-            return false;
+    public UserModel saveUser(UserModel user) {
+        user.setPassword(passwordEncoder.encode(user.getPassword()));
+        if (user.getRoles() == null || user.getRoles().isEmpty()) {
+            user.setRoles(List.of("USER"));
         }
+
+        UserModel savedUser = UserRespository.save(user);
+        logger.info("User saved successfully with id: {} and email: {}", savedUser.getId(), savedUser.getEmail());
+        return savedUser;
     }
 
     public List<UserModel> getAll() {
@@ -49,13 +50,10 @@ public class UserService {
         return UserRespository.findByEmail(email);
     }
 
-    public boolean updateUser(UserModel user) {
-        try {
-            UserRespository.save(user);
-            return true;
-        } catch (Exception e) {
-            return false;
-        }
+    public UserModel updateUser(UserModel user) {
+        UserModel updatedUser = UserRespository.save(user);
+        logger.info("User updated successfully with id: {}", updatedUser.getId());
+        return updatedUser;
     }
 
     public boolean login(String email, String password) {
